                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 22-08-2005 fixed: dvdplayer, old subtitles were not removed, this resulted in high memory usage and crashes.
 - 22-08-2005 fixed: dvdplayer, some dvds displayed to many audio / subtitle streams in osd.
 - 22-08-2005 fixed: dvdplayer, sometimes menu overlays were removed during menu navigation.
 - 22-08-2005 changed: percentage seeking now seeks using relative time from current position. (fixes seeking in some mkv's)
 - 22-08-2005 updated: mplayer.dll (fixes ogg in mkv's and ogm's)
 - 22-08-2005 fixed: graphic context, view port could be out of screen bound
 - 22-08-2005 changed: startup sound is not played if nav sounds are turned off 
 - 22-08-2005 added: file manager, calculate folder size for multiple selected items
 - 22-08-2005 updated: Italian language file (Thnx to kotix)
 - 22-08-2005 updated: Dutch language file (Thnx to nightspirit)
 - 22-08-2005 updated: Norwegian language file (Thnx to vnm)
 - 22-08-2005 updated: German language file
 - 21-08-2005 fixed: Font renderers. Long strings (such as RSS feeds) would crash xbmc.
 - 21-08-2005 fixed: File Manager will start playlist files (m3u, b4s, pls, strm, wpl)
 - 21-08-2005 added: Short crossfade on manual trackchange/skip if crossfading is enabled.
 - 21-08-2005 added: Option to en-/disable albumtrack crossfading if crossfading is enabled. (files must be properly tagged with albumtitle and tracknrs and must be scanned or id3 option enabled)
 - 21-08-2005 added: setting to enable/disable how items starting with "The" are sorted in Music and Video
 - 21-08-2005 fixed: Stacking